--- a/src/main/resources/static/templates/main.html
+++ b/src/main/resources/static/templates/main.html
@@ -9,6 +9,27 @@
         body{
             margin: 0;
             padding: 0;
+            align-content: center;
+        }
+        .input-box, .text-box{
+            margin-top: 50px;
+            text-align: center;
+        }
+        .input-box input[type=text]{
+            height: 40px;
+            width: 700px;
+            font-size: 25px;
+        }
+        .input-box input[type=button]{
+            margin: 3px 0;
+            height: 46px;
+            font-size: 20px;
+        }
+        .none{
+            display: none;
+        }
+        .show{
+            display: block;
         }
 
 
@@ -16,8 +37,21 @@
 </head>
 <body>
 
-
-<h1>index</h1>
+<div class="text-box">
+    <h3>url을 입력하세요.</h3>
+</div>
+<div class="input-box">
+    <input type="text" name="url" id="url"/>
+    <input type="button" value="변환" />
+</div>
+<div class="none">
+    <div class="text-box">
+        <h3>변경된 URL은 아래와 같습니다,</h3>
+    </div>
+    <div class="text-box">
+        <h5 id="changeUrl">변경된 URL 블라블라</h5>
+    </div>
+</div>
 
 </body>
 </html>
