--- a/src/main/resources/static/templates/main.html
+++ b/src/main/resources/static/templates/main.html
@@ -46,13 +46,13 @@
             <input type="button" value="변환" id="changeBtn" />
         </div>
     </div>
-    <div class="none">
+    <div class="none" id="resBox">
         <div class="text-box">
-            <h3>변경된 URL은 아래와 같습니다,</h3>
+            <h3>변경된 URL 정보</h3>
         </div>
         <div class="text-box">
-            <h5 >URL 호출횟수 : <label id="reqCnt"></label></h5>
             <h5 id="changeUrl">변경된 URL 블라블라</h5>
+            <h5 >URL 호출횟수 : <label id="reqCnt"></label>회</h5>
         </div>
     </div>
 </body>
@@ -76,7 +76,8 @@
             }),
             success:function(data){
                 console.log("호출");
-                console.log(data)
+                console.log(data);
+                $('#resBox').removeClass("none").addClass("show");
             },
             error:function () {
                 alert("변환할 수 없습니다. 다시시도해주세요.");
