--- a/src/main/resources/static/templates/main.html
+++ b/src/main/resources/static/templates/main.html
@@ -51,8 +51,8 @@
             <h3>변경된 URL 정보</h3>
         </div>
         <div class="text-box">
-            <h5 id="changeUrl">변경된 URL 블라블라</h5>
-            <h5 >URL 호출횟수 : <label id="reqCnt"></label>회</h5>
+            <h5 >변경된 URL : <label id="changeUrl"></label></h5>
+            <h5 >URL 요청수 : <label id="reqCnt"></label>회</h5>
         </div>
     </div>
 </body>
@@ -72,12 +72,15 @@
             dataType: 'json',
             contentType : 'application/json',
             data: JSON.stringify({
-                    url : $('#url').val()
+                    url : $('#url').val().trim()
             }),
             success:function(data){
                 console.log("호출");
                 console.log(data);
                 $('#resBox').removeClass("none").addClass("show");
+                $('#changeUrl').text(data.changeUrl);
+                $('#reqCnt').text(data.reqCnt);
+
             },
             error:function () {
                 alert("변환할 수 없습니다. 다시시도해주세요.");
@@ -85,6 +88,9 @@
         })
     }
 
+    $('#url').keydown(function(e){
+        if(e.keyCode === 13) urlChangeEvent();
+    });
     $('#changeBtn').click(urlChangeEvent);
 
 </script>
